@@ -132,12 +132,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
      2.4.x: svn merge -c 1811744 ^/httpd/httpd/trunk .
      +1: elukey, icing, ylavic
 
-  *) mod_http2: avoid unnecessary data retrieval for a trace log. Allow certain
-     information retrievals on null bucket beams where it makes sense.
-     trunk patch: https://svn.apache.org/r1813767
-     2.4.x patch: https://svn.apache.org/repos/asf/httpd/httpd/patches/2.4.x/mod_http2_v1.10.13.diff
-     +1: icing, ylavic, steffenal
-     
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
